--- a/pom.xml
+++ b/pom.xml
@@ -48,8 +48,18 @@
 			<artifactId>commons-dbcp2</artifactId>
 			<version>2.5.0</version>
 		</dependency>
-
-	</dependencies>
+		<dependency>
+		    <groupId>org.leolo</groupId>
+		    <artifactId>Job-Controller</artifactId>
+		    <version>0.1-RC3</version>
+		</dependency>
+	</dependencies>	
+	<repositories>
+		<repository>
+		    <id>jitpack.io</id>
+		    <url>https://jitpack.io</url>
+		</repository>
+	</repositories>
 	<issueManagement>
 		<system>MantisBT</system>
 		<url>https://bug.leolo.org/</url>
